# VOLEitH-folding

./: .gitignore  Cargo.toml  README.md  gf2.rs  gf2p128.rs  lib.rs  overview.md  proof.json  proof.txt  run_benchmark.sh  run_criterion_benchmarks.sh  run_hash_chain_benchmark.sh  specification.md  voleith.rs
benches/: poseidon_f2_benches.rs  poseidon_f64_benches.rs
benches/circuit/: keccak.txt  keccak_chi.txt  keccak_iota.txt  keccak_rho_pi.txt  keccak_theta.txt  not.txt  rot_const.txt  rotate_left.txt
circuit/: keccak_rho_pi.txt
circuits/: README.md  Readme.md  keccak.txt  keccak_chi.txt  keccak_iota.txt  keccak_rho_pi.txt  keccak_theta.txt  not.txt  private_input.txt  readme.md  rot_const.txt  rotate_left.txt
circuits/poseidon/f2/: README.md
circuits/poseidon/f64/: README.md
example/: main.rs
folding/: Cargo.toml  sha256.rs  test.rs
keccak/: Cargo.toml
keccak/src/: main.rs
proof/circuits/: keccak_rho_pi.txt
results/metrics/: metrics_f2.json  metrics_f64.json  metrics_hash_chain_f2.json  metrics_standard_f64.json
results/proofs/: proof_f2.json  proof_f64.json  proof_hash_chain_f2.json  proof_standard_f64.json
src/: Cargo.toml  aes_gadget.rs  all_but_one_vc.rs  blake3_gadget.rs  field_helpers.rs  fold.rs  gf2.rs  gf2p128.rs  homcom.rs  keccak.rs  lib.rs  main.rs  memo.md  merkle.rs  merkle_blake3.rs  merkle_sha.rs  prg_gadget.rs  proof.rs  prove.rs  vc.rs  vc_blake3.rs  verification.rs  verify.rs  voleith.rs
src/circuits/: poseidon.txt  poseidon_private.txt  poseidon_public.txt  readme.md
src/folding/: README.md  all_but_one_vc.rs  verification.rs  verify.rs
src/gadget/: aes_gadget.rs  blake3_gadget.rs  prg_gadget.rs
src/verify/: folding.rs
tests/: circuit_test.rs
vole-ith/: verification.rs
vole-ith/circuits/: keccak.txt  keccak_theta.txt
(+20 files in other folders)
