[package]
name = "voleitH-bench"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = true

[dependencies]
schmivitz = { git = "https://github.com/adust09/swanky", rev="f4d701309c6c221913f1d98fc3c9977e712815e4"}

eyre = "0.6.12"
rand = "0.8.5"
merlin = "3.0.0"
openssl = "0.10.55"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.29.10"
