[package]
name = "voleitH-bench"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = true

[dependencies]
schmivitz = { git = "https://github.com/adust09/swanky", rev="2c9631e03ba7a8c1a588ba1dc42164c309d04352"}

eyre = "0.6.12"
rand = "0.8.5"
merlin = "3.0.0"
openssl = "0.10.55"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.29.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "poseidon_f2_benches"
harness = false
