[package]
name = "voleitH-bench"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = true

[dependencies]
schmivitz = { git = "https://github.com/adust09/swanky", rev="054b5035b167796b0ca51a76411994140c3bd966"}

eyre = "0.6.12"
rand = "0.8.5"
merlin = "3.0.0"
openssl = "0.10.55"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.29.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "poseidon_f2_benches"
harness = false

[[bench]]
name = "poseidon_f64_benches"
harness = false
